--- a/index.html
+++ b/index.html
@@ -55,28 +55,28 @@
         <p>Pick the best fit</p>
         <div class="recommended__container">
             <div class="course-card">
-                <img src="./images/c1.jpg">
+                <img src="./c1.jpg">
                 <h3>2025 Python Data Visulaization Masterclass</h3>
                 <p>Col Steele</p>
                 <p>4.9⭐⭐⭐⭐</p>
                 <p>449 <del>971</del></p>
             </div>
             <div class="course-card">
-                <img src="./images/c2.jpg">
+                <img src="./c2.jpg">
                 <h3>Web Development Bootcamp 2025</h3>
                 <p>David Smith</p>
                 <p>4.7⭐⭐⭐⭐⭐</p>
                 <p>449 <del>699</del></p>
             </div>
             <div class="course-card">
-                <img src="./images/c3.jpg">
+                <img src="./c3.jpg">
                 <h3>Master UI/UX design with Figma</h3>
                 <p>Catherine John</p>
                 <p>4.6⭐⭐⭐⭐</p>
                 <p>449 <del>1017</del></p>
             </div>
             <div class="course-card">
-                <img src="./images/c4.jpg">
+                <img src="./c4.jpg">
                 <h3>Basic to advance Programming with EMC</h3>
                 <p>Rohit R</p>
                 <p>4.8⭐⭐⭐⭐⭐</p>
@@ -107,56 +107,56 @@
         <p class="popular__subtitle">Pick the best fit</p>
         <div class="popular__container">
             <div class="course-card">
-                <img src="./images/c6.jpg">
+                <img src="./c6.jpg">
                 <h3>DSA using Python</h3>
                 <p>Rohit R</p>
                 <p>4.9⭐⭐⭐⭐</p>
                 <p>449 <del>971</del></p>
             </div>
             <div class="course-card">
-                <img src="./images/c7.jpg">
+                <img src="./c7.jpg">
                 <h3>Full stack Web development using React</h3>
                 <p>Sundar Pichai</p>
                 <p>4.7⭐⭐⭐⭐⭐</p>
                 <p>449 <del>699</del></p>
             </div>
             <div class="course-card">
-                <img src="./images/c8.jpg">
+                <img src="./c8.jpg">
                 <h3>UI/UX design Basics</h3>
                 <p>Steve Johnson</p>
                 <p>4.6⭐⭐⭐⭐</p>
                 <p>449 <del>1017</del></p>
             </div>
             <div class="course-card">
-                <img src="./images/c9.jpg">
+                <img src="./c9.jpg">
                 <h3>Learn Programming using C#</h3>
                 <p>Mosh Hamedani</p>
                 <p>4.8⭐⭐⭐⭐⭐</p>
                 <p>449 <del>999</del></p>
             </div>
             <div class="course-card">
-                <img src="./images/c10.jpg">
+                <img src="./c10.jpg">
                 <h3>Design games using Python</h3>
                 <p>Col Steele</p>
                 <p>4.9⭐⭐⭐⭐</p>
                 <p>449 <del>971</del></p>
             </div>
             <div class="course-card">
-                <img src="./images/c11.jpg">
+                <img src="./c11.jpg">
                 <h3>Web Development using Angular</h3>
                 <p>Col Steele</p>
                 <p>4.7⭐⭐⭐⭐⭐</p>
                 <p>449 <del>699</del></p>
             </div>
             <div class="course-card">
-                <img src="./images/c12.jpg">
+                <img src="./c12.jpg">
                 <h3>UI/UX design basics</h3>
                 <p>Stella Waris</p>
                 <p>4.6⭐⭐⭐⭐</p>
                 <p>449 <del>1017</del></p>
             </div>
             <div class="course-card">
-                <img src="./images/c13.jpg">
+                <img src="./c13.jpg">
                 <h3>Java Programming from beignner to advanced</h3>
                 <p>Agnel</p>
                 <p>4.8⭐⭐⭐⭐⭐</p>
