--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!--Sale Image-->
     <div class="sale-image">
-        <img src="./images/sale-image.jpg" alt="Sale Image"> 
+        <img src="./sale-image.jpg" alt="Sale Image"> 
     </div>
 
     <!--Recommended-->
